--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "fynd_front": "file:",
     "socket.io-client": "^4.0.1",
     "vue": "^2.6.11",
     "vue-material": "^1.0.0-beta-7",
