--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-advanced-chat": "^0.8.5",
     "vue-router": "^3.2.0",
     "vue-socket.io": "^3.0.10",
+    "vue-socket.io-extended": "^4.2.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
