--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "socket.io-client": "^4.0.2",
     "vue": "^2.6.11",
     "vue-advanced-chat": "^0.8.5",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.2.0",
     "vue-socket.io": "^3.0.10",
     "vue-socket.io-extended": "^4.2.0",
