--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "fynd_front": "file:",
+    "moment": "^2.29.1",
     "socket.io-client": "^4.0.2",
     "vue": "^2.6.11",
     "vue-advanced-chat": "^0.8.5",
